--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -41,18 +41,19 @@ xmlns:tools="http://schemas.android.com/tools">
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:padding="4dp"
             android:id="@+id/search_result"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/search_button"
-            app:layout_constraintEnd_toEndOf="@id/search_button"
-            app:layout_constraintStart_toStartOf="@id/search_edit_text"
+            android:padding="4dp"
             app:layout_constraintBottom_toTopOf="@id/welcome_text"
-            tools:listitem="@layout/repo_item"
-            />
+            app:layout_constraintEnd_toEndOf="@id/search_button"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@id/search_edit_text"
+            app:layout_constraintTop_toBottomOf="@+id/search_button"
+            app:layout_constraintVertical_bias="1.0"
+            tools:listitem="@layout/repo_item" />
 
         <TextView
             android:id="@+id/welcome_text"
