--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -3,69 +3,61 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="item"
+            type="com.example.headwayTestTask.network.model.GitHubSearchItemModel" />
+    </data>
 
-    <com.google.android.material.card.MaterialCardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="4dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginTop="4dp">
+        android:orientation="vertical"
+        android:padding="4dp"
+        android:layout_margin="8dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/repo_name"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:text="@{item.name}"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            tools:text="Repo Name" />
 
-            <TextView
-                android:id="@+id/repo_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="4dp"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                tools:text="Repo Name"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/repo_description"
+            android:text="@{item.description}"
+            app:flow_horizontalBias="0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Repo Description"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
             <TextView
-                android:id="@+id/repo_description"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Repo Description"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
-                app:layout_constraintEnd_toEndOf="@+id/repo_name"
-                app:layout_constraintStart_toStartOf="@+id/repo_name"
-                app:layout_constraintTop_toBottomOf="@+id/repo_name" />
-
-            <TextView
-                android:id="@+id/repo_stars"
+                android:id="@+id/repo_stargazers_count"
+                android:text="@{item.stargazers_count}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="12.3k"
-                app:layout_constraintStart_toStartOf="@+id/repo_description"
-                app:layout_constraintTop_toBottomOf="@+id/repo_description" />
-
+                tools:text="12.3k"/>
             <TextView
                 android:id="@+id/repo_language"
+                android:text="@{item.language}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Language"
-                app:layout_constraintStart_toEndOf="@+id/repo_stars"
-                app:layout_constraintTop_toTopOf="@+id/repo_stars" />
-
-
+                tools:text="Language"/>
             <TextView
                 android:id="@+id/repo_last_update"
+                android:maxLength="10"
+                android:text="@{item.updatedAt}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Updated 2days ago"
-                app:layout_constraintStart_toEndOf="@+id/repo_language"
-                app:layout_constraintTop_toTopOf="@+id/repo_language" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </com.google.android.material.card.MaterialCardView>
+                tools:text="Updated 2days ago"/>
+        </LinearLayout>
+    </LinearLayout>
 </layout>
