refactor: move padding, margins etc. to dimens.xml, rename xml elements id

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -16,63 +16,63 @@ xmlns:tools="http://schemas.android.com/tools">
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/search_edit_text"
+            android:id="@+id/search_edt"
             android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="8dp"
-            android:hint="Enter name of repo.."
+            android:layout_height="@dimen/search_edt_height"
+            android:layout_marginStart="@dimen/default_start_margin"
+            android:layout_marginEnd="@dimen/search_edt_end_margin"
+            android:hint="@string/search_edt_hint"
             android:inputType="textAutoComplete"
-            app:layout_constraintEnd_toStartOf="@+id/search_button"
+            app:layout_constraintEnd_toStartOf="@+id/search_btn"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/search_button"
+            app:layout_constraintTop_toTopOf="@id/search_btn"
             />
+
         <Button
-            android:id="@+id/search_button"
+            android:id="@+id/search_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Search"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp"
+            android:text="@string/search_btn_text"
+            android:layout_marginEnd="@dimen/default_end_margin"
+            android:layout_marginTop="@dimen/default_top_margin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
 
-
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/search_result"
+            android:id="@+id/search_result_rv"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:padding="4dp"
-            app:layout_constraintBottom_toTopOf="@id/welcome_text"
-            app:layout_constraintEnd_toEndOf="@id/search_button"
+            android:layout_marginTop="@dimen/search_result_rv_margin_top"
+            android:layout_marginBottom="@dimen/search_result_rv_margin_bottom"
+            android:padding="@dimen/search_result_rv_padding"
+            app:layout_constraintBottom_toTopOf="@id/welcome_tv"
+            app:layout_constraintEnd_toEndOf="@id/search_btn"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@id/search_edit_text"
-            app:layout_constraintTop_toBottomOf="@+id/search_button"
+            app:layout_constraintStart_toStartOf="@id/search_edt"
+            app:layout_constraintTop_toBottomOf="@+id/search_btn"
             app:layout_constraintVertical_bias="1.0"
             tools:listitem="@layout/repo_item" />
 
         <TextView
-            android:id="@+id/welcome_text"
+            android:id="@+id/welcome_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="10dp"
+            android:layout_marginBottom="@dimen/welcome_tv_margin_bottom"
+            android:padding="@dimen/welcome_tv_padding"
             android:textAlignment="center"
-            app:layout_constraintBottom_toTopOf="@+id/login_button"
+            app:layout_constraintBottom_toTopOf="@+id/login_btn"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             tools:text="Hi" />
 
         <Button
-            android:id="@+id/login_button"
+            android:id="@+id/login_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="@dimen/default_bottom_margin"
             android:background="@color/purple_700"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
