--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -17,21 +17,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="4dp"
-        android:layout_margin="8dp"
+        android:padding="@dimen/repo_item_padding"
+        android:layout_margin="@dimen/repo_item_margin"
         android:onClick="@{() -> repoItemClick.onGitHubSearchItemClicked(item)}">
 
         <TextView
             android:id="@+id/repo_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{item.name}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             tools:text="Repo Name" />
 
         <TextView
             android:id="@+id/repo_description"
-            android:text="@{item.description}"
             app:flow_horizontalBias="0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,13 +42,11 @@
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/repo_stargazers_count"
-                android:text="@{item.stargazers_count}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="12.3k"/>
             <TextView
                 android:id="@+id/repo_language"
-                android:text="@{item.language}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -58,7 +54,6 @@
             <TextView
                 android:id="@+id/repo_last_update"
                 android:maxLength="10"
-                android:text="@{item.updatedAt}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -66,7 +61,6 @@
 
             <TextView
                 android:id="@+id/repo_visited_flag"
-                android:text="@{item.visitedFlag}"
                 android:gravity="end"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
