feat(db): implement database support into LastVisitedFragment.kt

--- a/app/src/main/res/layout/last_visited_fragment.xml
+++ b/app/src/main/res/layout/last_visited_fragment.xml
@@ -28,7 +28,7 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/search_result_rv"
+            android:id="@+id/visited_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/default_start_margin"
