--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -10,58 +10,67 @@
 
     </data>
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/repo_item_padding"
-        android:layout_margin="@dimen/repo_item_margin">
-
-        <TextView
-            android:id="@+id/repo_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            tools:text="Repo Name" />
-
-        <TextView
-            android:id="@+id/repo_description"
-            app:flow_horizontalBias="0"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="Repo Description"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+        android:layout_marginBottom="@dimen/default_bottom_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/repo_stargazers_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="12.3k"/>
-            <TextView
-                android:id="@+id/repo_language"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                tools:text="Language"/>
-            <TextView
-                android:id="@+id/repo_last_update"
-                android:maxLength="10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                tools:text="Updated 2days ago"/>
+            android:orientation="vertical"
+            android:padding="@dimen/repo_item_padding"
+            android:layout_margin="@dimen/repo_item_margin">
 
             <TextView
-                android:id="@+id/repo_visited_flag"
-                android:gravity="end"
-                android:layout_width="0dp"
+                android:id="@+id/repo_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                tools:text="Visited" />
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                tools:text="Repo Name" />
+
+            <TextView
+                android:id="@+id/repo_description"
+                app:flow_horizontalBias="0"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="Repo Description"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/repo_stargazers_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="12.3k"/>
+                <TextView
+                    android:id="@+id/repo_language"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    tools:text="Language"/>
+                <TextView
+                    android:id="@+id/repo_last_update"
+                    android:maxLength="10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    tools:text="Updated 2days ago"/>
+
+                <TextView
+                    android:id="@+id/repo_visited_flag"
+                    android:gravity="end"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    tools:text="Visited" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+
 </layout>
